# suppleanten

./: .gitignore  README.md  pyproject.toml
app/: documents.py  main.py  qa.py
docs/: user-stories.md
documents/budget/: ejerforening_budget.xlsx
documents/fakturaer/: 00_oversigt.md  01_vvs_vandrorsbrud.md  02_vvs_fjernvarmeservice.md  03_vvs_wc_cisterne.md  04_skorstensfejer_forar.md  05_skorstensfejer_efterar.md  06_hofor_vand_aconto.md  07_hofor_aarsopgorelse.md  08_radius_elnet.md  09_elhandel_faelles.md  10_bygningsforsikring_aar.md  11_bestyrelsesansvar.md  12_elektriker_trappelys.md  13_elektriker_eltavle.md  14_haveservice_haek.md  15_haveservice_graes_q3.md  16_snerydning_vinter.md  17_tomrer_tag.md  18_murer_facade.md  19_maler_opgang.md  20_skadedyr_rotte.md  21_revisor_aarsregnskab.md  22_administrator_q1.md  23_bankgebyrer_aar.md  24_diverse_tagrender.md
documents/vedtægter/: vedtaegter.md
tests/: test_document_qa.py  test_telegram_poc.py
